--- a/package.json
+++ b/package.json
@@ -1,11 +1,22 @@
 {
 	"name": "coco-maskapi",
 	"version": "0.0.1",
-	"private": true,
+	"license": "BSD-3-Clause",
+	"publishConfig": {
+		"directory": "dist"
+	},
+	"exports": {
+		".": {
+            "types": "./index.d.ts",
+            "default": "./index.js"
+		},
+		"./package.json": "./package.json"
+	},
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
+		"package": "svelte-package && npx @nil-/postpackage ./dist",
 		"test": "npm run test:unit",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -14,8 +25,10 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
+		"@nil-/postpackage": "^0.0.4",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"@sveltejs/package": "^2.2.2",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"eslint": "^8.28.0",
